Prevent horizontal scrollbar

--- a/src/app/code/Mgt/DeveloperToolbar/view/frontend/web/css/style.css
+++ b/src/app/code/Mgt/DeveloperToolbar/view/frontend/web/css/style.css
@@ -344,6 +344,7 @@ table.data-table tbody td {
   padding: 10px;
   margin: 0px;
   white-space: normal;
+  word-break: break-word;
 }
 
 .mgt-developer-toolbar-sidebar-database-queries td {
